--- a/styles/sk3ltn-php.less
+++ b/styles/sk3ltn-php.less
@@ -13,6 +13,12 @@
         &.operator.string {
             color: @green;
         }
+        &.operator.arithmetic {
+            color: @yellow;
+        }
+        &.operator.logical {
+            color: @orange;
+        }
     }
 
     .constant {
@@ -23,6 +29,12 @@
     .support {
         &.basic_functions {
             color: @orange-light;
+        }
+        &.function {
+            color: @orange-light;
+            &.construct {
+                color: lighten(@green, 20%);;
+            }
         }
     }
 
@@ -48,6 +60,7 @@
         &.array {
             .function {
                 color: lighten(@green, 10%);
+                font-style: italic;
             }
             .punctuation{
                 color: darken(@red, 10%);
@@ -55,9 +68,14 @@
         }
     }
 
+
     .variable {
-        color: @cyan;
+        color: lighten(@cyan, 10%);;
         font-style: italic;
+
+        .punctuation {
+            color: @cyan !important;
+        }
     }
 
     .quoted.php {
@@ -70,6 +88,14 @@
     .punctuation {
         &.terminator {
             color: white;
+        }
+    }
+
+    .comment {
+        .punctuation {
+            &.definition {
+                color: @light-gray;
+            }
         }
     }
 }
